gitops/apps/environments/staging/patches/minio/minio-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console-ingress
spec:
  rules:
    - host: minio-staging.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
  tls:
    - hosts:
        - minio-staging.home
      secretName: minio-staging-console-tls-cert
